src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Text</type>
        <length>60</length>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>Birth Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Text</type>
        <length>15</length>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Text</type>
        <length>15</length>
    </fields>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <label>Employee ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <type>Text</type>
        <length>4</length>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <type>Text</type>
        <length>10</length>
    </fields>
    <fields>
        <fullName>HireDate__c</fullName>
        <label>Hire Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>Home Phone</label>
        <type>Text</type>
        <length>24</length>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <type>Text</type>
        <length>20</length>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>PhotoPath__c</fullName>
        <label>Photo Path</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <type>Text</type>
        <length>10</length>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Text</type>
        <length>15</length>
    </fields>
    <fields>
        <fullName>ReportsTo__c</fullName>
        <label>Reports To</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Text</type>
        <length>30</length>
    </fields>
    <fields>
        <fullName>TitleOfCourtesy__c</fullName>
        <label>Title Of Courtesy</label>
        <type>Text</type>
        <length>25</length>
    </fields>
    <label>Employee</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>{!label} Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>